--- a/app/globals.css
+++ b/app/globals.css
@@ -10,4 +10,6 @@ h1{
     transform: translate(-50% , -50%);
     font-size: 80px;
     text-transform: capitalize;
+    font-weight: 600;
+    text-transform: capitalize;
 }
